testing clevercloud prod conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -80,11 +80,13 @@ date.format=yyyy-MM-dd
 # CONFIGURATION DEV => play run --%dev
 %dev.db=mem
 
-#CONFIG PROD (Heroku)
-%prod.db=${DATABASE_URL}
+#CONFIG PROD (clever cloud)
+%prod.db=${POSTGRESQL_ADDON_URI}
+%prod.db.user=${POSTGRESQL_ADDON_USER}
+%prod.db.password=${POSTGRESQL_ADDON_PASSWORD}
+%prod.db.port=${POSTGRESQL_ADDON_PORT}
 %prod.jpa.ddl=update
 %prod.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
-
 # ~~~~~ 
 # Enable a database engine if needed.
 #
