--- a/conf/application.conf
+++ b/conf/application.conf
@@ -87,7 +87,8 @@ date.format=yyyy-MM-dd
 %prod.db.port=${POSTGRESQL_ADDON_PORT}
 %prod.jpa.ddl=update
 %prod.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
-# ~~~~~ 
+%prod.db.driver=org.postgresql.Driver
+# ~~~~~
 # Enable a database engine if needed.
 #
 # To quickly set up a development database, use either:
