--- a/conf/application.conf
+++ b/conf/application.conf
@@ -81,13 +81,17 @@ date.format=yyyy-MM-dd
 %dev.db=mem
 
 #CONFIG PROD (clever cloud)
-%prod.db=${POSTGRESQL_ADDON_URI}
-%prod.db.user=${POSTGRESQL_ADDON_USER}
-%prod.db.password=${POSTGRESQL_ADDON_PASSWORD}
-%prod.db.port=${POSTGRESQL_ADDON_PORT}
-%prod.jpa.ddl=update
-%prod.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
-%prod.db.driver=org.postgresql.Driver
+# %prod.db=${POSTGRESQL_ADDON_URI}
+# %prod.db.user=${POSTGRESQL_ADDON_USER}
+# %prod.db.password=${POSTGRESQL_ADDON_PASSWORD}
+# %prod.db.port=${POSTGRESQL_ADDON_PORT}
+# %prod.jpa.ddl=update
+# %prod.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
+# %prod.db.driver=org.postgresql.Driver
+%prod.application.mode=prod
+%prod.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
+%prod.jpa.ddl=create
+%prod.mail.smtp=mock
 # ~~~~~
 # Enable a database engine if needed.
 #
