--- a/conf/application.conf
+++ b/conf/application.conf
@@ -88,6 +88,7 @@ date.format=yyyy-MM-dd
 # %prod.jpa.ddl=update
 # %prod.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
 # %prod.db.driver=org.postgresql.Driver
+%prod.db=mem
 %prod.application.mode=prod
 %prod.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
 %prod.jpa.ddl=create
@@ -231,3 +232,29 @@ mail.smtp=mock
 %test.jpa.ddl=create
 %test.mail.smtp=mock
 
+
+# %clevercloud.application.mode=prod
+# %clevercloud.db.url=jdbc:postgresql://bmvrigw86jdz8ed43pt9-postgresql.services.clever-cloud.com:5432/bmvrigw86jdz8ed43pt9
+# %clevercloud.db.driver=org.postgresql.Driver
+# %clevercloud.db.user=u1dnu3lwxsigmwy2znbd
+# %clevercloud.db.pass=dVWBIboJ5aQx1FkVZifp
+# %clevercloud.db.jpa.ddl=update
+# %clevercloud.db.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# %production.db.driver="org.postgresql.Driver"
+# %production.db.url="jdbc:postgresql://bmvrigw86jdz8ed43pt9-postgresql.services.clever-cloud.com:5432/bmvrigw86jdz8ed43pt9"
+# %production.db.user="u1dnu3lwxsigmwy2znbd"
+# %production.db.pass="dVWBIboJ5aQx1FkVZifp"
+# %production.jpa.ddl=create
+# %production.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#%production.db=${DATABASE_URL}
+%prod.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
+%prod.jpa.ddl=update
+#%production.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+db.default.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
+jpa.default.ddl=create
+
+clevercloud.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
+clevercloud.db.jpa.ddl=create
