--- a/conf/application.conf
+++ b/conf/application.conf
@@ -80,19 +80,11 @@ date.format=yyyy-MM-dd
 # CONFIGURATION DEV => play run --%dev
 %dev.db=mem
 
-#CONFIG PROD (clever cloud)
-# %prod.db=${POSTGRESQL_ADDON_URI}
-# %prod.db.user=${POSTGRESQL_ADDON_USER}
-# %prod.db.password=${POSTGRESQL_ADDON_PASSWORD}
-# %prod.db.port=${POSTGRESQL_ADDON_PORT}
-# %prod.jpa.ddl=update
-# %prod.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
-# %prod.db.driver=org.postgresql.Driver
-%prod.db=mem
-%prod.application.mode=prod
-%prod.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
-%prod.jpa.ddl=create
-%prod.mail.smtp=mock
+#CONFIG PROD (Heroku)
+#%prod.db=${DATABASE_URL}
+#%prod.jpa.ddl=update
+#%prod.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 # ~~~~~
 # Enable a database engine if needed.
 #
@@ -231,7 +223,6 @@ mail.smtp=mock
 %test.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
 %test.jpa.ddl=create
 %test.mail.smtp=mock
-
 
 # %clevercloud.application.mode=prod
 # %clevercloud.db.url=jdbc:postgresql://bmvrigw86jdz8ed43pt9-postgresql.services.clever-cloud.com:5432/bmvrigw86jdz8ed43pt9
