--- a/conf/application.conf
+++ b/conf/application.conf
@@ -257,3 +257,12 @@ mail.smtp=mock
 %prod.jpa.ddl=update
 %prod.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
 %prod.db.driver=org.postgresql.Driver
+
+
+%clevercloud.db=${POSTGRESQL_ADDON_URI}
+%clevercloud.db.user=${POSTGRESQL_ADDON_USER}
+%clevercloud.db.password=${POSTGRESQL_ADDON_PASSWORD}
+%clevercloud.db.port=${POSTGRESQL_ADDON_PORT}
+%clevercloud.jpa.ddl=update
+%clevercloud.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
+%clevercloud.db.driver=org.postgresql.Driver
