--- a/conf/application.conf
+++ b/conf/application.conf
@@ -239,30 +239,29 @@ mail.smtp=mock
 # %production.jpa.ddl=create
 # %production.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-#%production.db=${DATABASE_URL}
-# %prod.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0POSTGRESQL_ADDON_URI
-# %prod.jpa.ddl=update
-# #%production.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
-#
-# db.default.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
-# jpa.default.ddl=create
-#
-# clevercloud.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
-# clevercloud.db.jpa.ddl=create
-
-%prod.db=${POSTGRESQL_ADDON_URI}
-%prod.db.user=${POSTGRESQL_ADDON_USER}
-%prod.db.password=${POSTGRESQL_ADDON_PASSWORD}
-%prod.db.port=${POSTGRESQL_ADDON_PORT}
+%prod.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0POSTGRESQL_ADDON_URI
 %prod.jpa.ddl=update
-%prod.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
-%prod.db.driver=org.postgresql.Driver
+#%production.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+db.default.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
+jpa.default.ddl=create
 
-%clevercloud.db=${POSTGRESQL_ADDON_URI}
-%clevercloud.db.user=${POSTGRESQL_ADDON_USER}
-%clevercloud.db.password=${POSTGRESQL_ADDON_PASSWORD}
-%clevercloud.db.port=${POSTGRESQL_ADDON_PORT}
-%clevercloud.jpa.ddl=update
-%clevercloud.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
-%clevercloud.db.driver=org.postgresql.Driver
+clevercloud.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
+clevercloud.db.jpa.ddl=create
+
+# %prod.db=${POSTGRESQL_ADDON_URI}
+# %prod.db.user=${POSTGRESQL_ADDON_USER}
+# %prod.db.password=${POSTGRESQL_ADDON_PASSWORD}
+# %prod.db.port=${POSTGRESQL_ADDON_PORT}
+# %prod.jpa.ddl=update
+# %prod.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
+# %prod.db.driver=org.postgresql.Driver
+#
+#
+# %clevercloud.db=${POSTGRESQL_ADDON_URI}
+# %clevercloud.db.user=${POSTGRESQL_ADDON_USER}
+# %clevercloud.db.password=${POSTGRESQL_ADDON_PASSWORD}
+# %clevercloud.db.port=${POSTGRESQL_ADDON_PORT}
+# %clevercloud.jpa.ddl=update
+# %clevercloud.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
+# %clevercloud.db.driver=org.postgresql.Driver
